--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "repository": "https://github.com/rockhopper-penguin/self-introductionAPI",
   "author": "rockhopper-penguin <46835999+rockhopper-penguin@users.noreply.github.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "ts-lint": "^4.5.1",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.7",
+    "express": "^4.17.1",
+    "ts-node": "^8.10.2"
+  }
 }
