--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/node": "^14.0.24",
     "ts-lint": "^4.5.1",
     "typescript": "^3.9.7"
   },
