--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "ts-node": "^8.10.2"
   }
