--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.7",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.31",
     "ts-node": "^8.10.2"
   }
 }
