--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/moment-timezone": "^0.5.13",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "moment-timezone": "^0.5.31",
