--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/moment-timezone": "^0.5.13",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment-timezone": "^0.5.31",
     "ts-node": "^8.10.2"
